methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:31: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireV(); forward; forward(); left(); forward(); 
          ^MethodsPicture:5: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run() {
             ^